# nix

./: .gitignore  Makefile  TODO  flake.nix  flake.nix.bak  flake.nix.old  meson.build  meson_options.txt
.github/workflows/: ci.yml  test.yml
dependencies/: meson.build
dependencies/archive/: meson.build
dependencies/aws-cpp-sdk-s3/: meson.build
dependencies/aws-sdk-cpp/: meson.build
dependencies/bdw-gc/: meson.build
dependencies/boost/: meson.build
dependencies/brotli/: meson.build
dependencies/bz2/: meson.build
dependencies/curl/: meson.build
dependencies/dl/: meson.build
dependencies/editline/: meson.build
dependencies/functions/: meson.build
dependencies/gtest/: meson.build
dependencies/headers/: meson.build
dependencies/lowdown/: meson.build
dependencies/lzma/: meson.build
dependencies/openssl/: meson.build
dependencies/pthread/: meson.build
dependencies/rapidcheck/: meson.build
dependencies/seccomp/: meson.build
dependencies/sodium/: meson.build
dependencies/sqlite/: meson.build
dependencies/zlib/: meson.build
doc/: meson.build
doc/internal-api/: doxygen.cfg.in
doc/manual/: meson.build
doc/manual/misc/: meson.build
doc/manual/src/contributing/: testing.md
include/config_h/: meson.build
include/macros/: meson.build
nix/: meson.build
nix/libcmd/src/: meson.build
nix/libstore/src/: meson.build
nix/nix/: meson.build
nix/nix/data/: meson.build
nix/nix/misc/: meson.build
nix/nix/src/: meson.build
nix/perl/: MANIFEST
nix/perl/src/: meson.build
scripts/: meson.build
scripts/manual/: prepend-title-to-manpage.sh  write-builtins.sh  write-conf-file.sh  write-new-cli.sh  write-summary.sh
src/: meson.build
src/build-remote/: meson.build
src/libcmd/: meson.build
src/libexpr/: meson.build
src/libexpr-tests/: derived-path.cc  error_traces.cc  json.cc  local.mk  primops.cc  trivial.cc
src/libexpr-tests/test/: libexpr.hh
src/libexpr-tests/test/value/: print.cc
src/libexpr-tests/value/: context.cc
src/libexpr/flake/: meson.build
src/libexpr/primops/: meson.build
src/libfetchers/: meson.build
src/libmain/: meson.build
src/libstore/: meson.build
src/libstore-tests/: derivation.cc  derived-path.cc  local.mk  machines.cc  outputs-spec.cc  path.cc
src/libstore-tests/test/: derived-path.hh  outputs-spec.hh
src/libstore/builtins/: meson.build
src/libutil/: meson.build
src/libutil-tests/: hash.cc  local.mk
src/libutil/tests/: meson.build
src/nix/: meson.build
src/nix-build/: meson.build
src/nix-channel/: meson.build
src/nix-collect-garbage/: meson.build
src/nix-copy-closure/: meson.build
src/nix-env/: meson.build
src/nix-instantiate/: meson.build
src/nix-store/: meson.build
src/nlohmann/: meson.build
src/resolve-system-dependencies/: meson.build
src/tests/: meson.build
src/tests/libutil-tests/: meson.build
subprojects/: lowdown.wrap
tests/: meson.build  run-test.sh
tests/flakes/: meson.build
