

  'flakes/absolute-paths.sh',
  'flakes/bundle.sh',
  'flakes/run.sh',
  'flakes/mercurial.sh',
  'flakes/check.sh',
  'flakes/circular.sh',
  'flakes/flakes.sh',
  'flakes/flake-in-submodule.sh',
  'flakes/follow-paths.sh',
  'flakes/init.sh',
  'flakes/inputs.sh',
  'flakes/build-paths.sh',
  'flakes/unlocked-override.sh',